# serializer version: 1
# name: test_feature_spec_version_deterministic
  '277dec2f46929691730b2cab1e0d5d173e60b788bbd89043dd738bd838424fdc'
# ---
# name: test_feature_spec_version_includes_all_properties
  '58b32de79482ec371a16fce9eabe07c9a9ec4d248a3b733b53f57038cab91fc8'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'feature_spec_version': '003520d69c708c05d16b2a94a4845683f97fccdc0553b8dbc0f55ea7b5fd0d04',
    'feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'deps': None,
      'fields': list([
        dict({
          'code_version': '1',
          'deps': list([
          ]),
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
      'lineage': dict({
        'relationship': dict({
          'type': '1:1',
        }),
      }),
      'metadata': dict({
      }),
    }),
    'feature_spec_version': '984cc68f582570c8045340a3447c271acbb23f2ba4f53ce7e84a8cfe84656820',
    'feature_tracking_version': 'bda700d1a1a035c939d5641f3bdae9aad5a3565ac3b90611978d501c322433b7',
    'feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  'b24bb3d39be8d573d61c273a13e4fa63c4646fd7ba1fa9fc6a51fe5dcbb1cd03'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  '59732ad1dd1c7112e7de0de495426bbf2e423a68d548246b9382a33aba899341'
# ---
